# cgfd-lab

./: .gitignore  CMakeLists.txt  README.md
advection/: adv_1d_common_mod.F90  adv_1d_square_case_mod.F90
advection/beam_warming/: CMakeLists.txt  beam_warming_adv_1d_case.f90
advection/crank_nicolson/: CMakeLists.txt  crank_nicolson_adv_1d_case.f90
advection/ffsl/: CMakeLists.txt  ffsl_adv_1d_case.f90  ffsl_adv_2d_case.f90
advection/fromm/: CMakeLists.txt  fromm_adv_1d_case.f90  namelist
advection/ftcs/: CMakeLists.txt  ftcs_adv_1d_case.f90
advection/lax_wendroff/: CMakeLists.txt  lax_wendroff_adv_1d_case.f90
advection/leap_frog/: CMakeLists.txt  leap_frog_adv_1d_case.f90
advection/mpdata/: CMakeLists.txt  mpdata_adv_1d_case.f90
advection/semi_lagrangian/: CMakeLists.txt  semi_lagrangian_adv_2d_case.f90
advection/tspas/: CMakeLists.txt  tspas_adv_1d_case.f90
advection/tvd/: CMakeLists.txt  tvd_adv_1d_case.f90
advection/upwind/: CMakeLists.txt  upwind_adv_1d_case.f90
advection/weno/: CMakeLists.txt  weno_adv_1d_case.f90  weno_adv_fd_1d_case.f90  weno_adv_fv_1d_case.f90
analysis/: lagrange_polynomial.py  stability_regions.py
beam_warming/: CMakeLists.txt  beam_warming_adv_1d_case.f90
crank_nicolson/: CMakeLists.txt  crank_nicolson_adv_1d_case.f90
docker/: Dockerfile  build.sh
ffsl/: CMakeLists.txt  ffsl_adv_1d_case.f90  ffsl_adv_2d_case.f90  namelist
fromm/: CMakeLists.txt  fromm_adv_1d_case.f90
ftcs/: CMakeLists.txt  ftcs_adv_1d_case.f90
lax_wendroff/: CMakeLists.txt  lax_wendroff_adv_1d_case.f90
leap_frog/: CMakeLists.txt  leap_frog_adv_1d_case.f90
linear_swm/: CMakeLists.txt  linear_swm_a_grid.F90  linear_swm_b_grid.F90  linear_swm_c_grid.F90  linear_swm_common_mod.F90  plot.py
mpdata/: CMakeLists.txt  mpdata_adv_1d_case.f90  namelist
semi_lagrangian/: CMakeLists.txt
tools/: plot_adv_1d.ncl  plot_adv_1d.py  plot_adv_2d.ncl  plot_error_metrics.ncl
tspas/: CMakeLists.txt  tspas_adv_1d_case.f90
upwind/: CMakeLists.txt  upwind_adv_1d_case.f90
weno/: CMakeLists.txt  weno_adv_1d_case.f90
