cmake_minimum_required(VERSION 2.8)

project(iap-cgfd-adv-cases Fortran)

set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -fdefault-real-8 -ffree-line-length-none -Ofast -flto")

find_package(PkgConfig)
if (${PKG_CONFIG_FOUND})
  pkg_search_module(NETCDF REQUIRED netcdf)
  if (${NETCDF_FOUND})
    include_directories (${NETCDF_INCLUDEDIR})
    link_directories (${NETCDF_LIBDIR})
  else ()
    message(FATAL_ERROR "Pkg-config could not find netcdf library!")
  endif ()
else ()
  message(FATAL_ERROR "Unable to find pkg-config library!")
endif ()

add_subdirectory(ftcs)
add_subdirectory(upwind)
add_subdirectory(beam_warming)
add_subdirectory(lax_wendroff)
add_subdirectory(fromm)
add_subdirectory(leap_frog)
add_subdirectory(crank_nicolson)
add_subdirectory(tspas)
add_subdirectory(mpdata)
add_subdirectory(weno)
add_subdirectory(ffsl)
add_subdirectory(semi_lagrangian)
add_subdirectory(linear_swm)
