cmake_minimum_required(VERSION 2.8)

project(iap-cgfd-demo Fortran)

set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -fdefault-real-8 -ffree-line-length-none -Ofast -flto")

find_package(PkgConfig)
if (${PKG_CONFIG_FOUND})
  pkg_search_module(NETCDF REQUIRED netcdf)
  if (${NETCDF_FOUND})
    include_directories (${NETCDF_INCLUDEDIR})
    link_directories (${NETCDF_LIBDIR})
  else ()
    message(FATAL_ERROR "Pkg-config could not find netcdf library!")
  endif ()
else ()
  message(FATAL_ERROR "Unable to find pkg-config library!")
endif ()

add_subdirectory(advection/ftcs)
add_subdirectory(advection/upwind)
add_subdirectory(advection/beam_warming)
add_subdirectory(advection/lax_wendroff)
add_subdirectory(advection/fromm)
add_subdirectory(advection/leap_frog)
add_subdirectory(advection/crank_nicolson)
add_subdirectory(advection/tspas)
add_subdirectory(advection/mpdata)
add_subdirectory(advection/weno)
add_subdirectory(advection/tvd)
add_subdirectory(advection/ffsl)
add_subdirectory(advection/semi_lagrangian)
add_subdirectory(linear_swm)
